Materializeアンインストールviewはまだ

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4,5 +4,5 @@
 // Variables
 @import "variables";
 
-// Materialize
-@import "materialize-css/sass/materialize.scss";
+// Bootstrap
+@import "bootstrap/scss/bootstrap";
