feat: カレンダー実装

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -47,6 +47,9 @@ td.today {
     background-color: #d65e72;
     color: #fff;
 }
+.traing-exec-calendar {
+    background-color: bisque;
+}
 #next-prev-button {
     position: relative;
 }
